# duckql-python

./: .editorconfig  .gitignore  .gitlab-ci.yml  404.html  CHANGELOG.md  Pipfile  README.md  index.html  mkdocs.yml  publish.sh  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: docs.yml  pythonpackage.yml  tests.yml
backboneql/: base.py  cli.py  exceptions.py  utils.py
backboneql/functions/: __init__.py  avg.py  base.py  concat.py  convert_timezone.py  count.py  current_date.py  date_add.py  date_format.py  date_sub.py  extract.py  group_concat.py  min_max.py  string_agg.py  sum.py  weekday.py
backboneql/properties/: array.py  boolean.py  constant.py  null.py  property.py
backboneql/structures/: __init__.py  between.py  cast_operator.py  comparision.py  distinct.py  interval.py  join.py  limit.py  operator.py  order.py  query.py
backboneql/types/: base.py
custom/: main.html
docs/: index.md
docs/functions/: avg.md  concat.md  convert_timezone.md  count.md  current_date.md  date_add.md  date_format.md  date_sub.md  extract.md  group_concat.md  initcap.md  lower.md  max.md  min.md  now.md  string_agg.md  sum.md  to_char.md  to_date.md  unaccent.md  upper.md  weekday.md
docs/properties/: array.md  boolean.md  constant.md  null.md  property.md
docs/structures/: between.md  cast_operator.md  comparision.md  distinct.md  interval.md  join.md  limit.md  operator.md  order.md  query.md
duckql/: __init__.py  base.py  cli.py  exceptions.py  factory.py  utils.py
duckql/functions/: __init__.py  array_agg.py  avg.py  base.py  concat.py  convert_timezone.py  count.py  current_date.py  date_add.py  date_format.py  date_sub.py  extract.py  first_value.py  group_concat.py  initcap.py  lower.py  min_max.py  now.py  string_agg.py  (+6 more)
examples/: aggregation.json  base.json  case.json  example.json  having.json  nested_conditions.json  tripple_or_condition.json  users.json
search/: search_index.json
(+181 files in other folders)
