[tool.poetry]
name = "duckql-python"
version = "0.12.0"
description = "JSON declarative SQL conversion library"
authors = ["Jakub Dubec <jakub.dubec@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
pydantic = "^1.0"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.11.1"
mkdocs-material = "^8.0.0"
pytest = "^6.2.2"
coverage = "^5.0.4"
pytest-flake8 = "^1.0.4"
mkdocs = "^1.1"

[tool.coverage.run]
omit = ['*/tests/*', 'docs/']
source = ['duckql/']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
