[tool.poetry]
name = "duckql-python"
version = "0.13.0"
description = "JSON declarative SQL conversion library"
authors = ["Jakub Dubec <jakub.dubec@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
pydantic = "^1.0"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0"
mkdocs-material = "^8.2"
pytest = "^7.1"
coverage = "^6.3"
pytest-flake8 = "^1.1"
mkdocs = "^1.3"

[tool.coverage.run]
omit = ['*/tests/*', 'docs/']
source = ['duckql/']

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
