[tool.poetry]
name = "duckql-python"
version = "0.14.0"
description = "JSON declarative SQL conversion library"
authors = ["Jakub Dubec <jakub.dubec@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.0"
typing-extensions = "^3.7.4"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0"
mkdocs-material = "^9.5"
pytest = "^8.0"
coverage = "^7.0"
pytest-flake8 = "^1.3"
mkdocs = "^1.3"

[tool.coverage.run]
omit = ['*/tests/*', 'docs/']
source = ['duckql/']

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
